--- a/clc/server1.yml
+++ b/clc/server1.yml
@@ -68,7 +68,7 @@ storage:
       filesystem: root
       mode: 0777
       contents:
-        inline: k8smaster01
+        inline: ip-172-31-85-10.ec2.internal
     - path: /opt/scripts/k8s-install.sh
       filesystem: root
       mode: 0550
@@ -93,3 +93,9 @@ storage:
       contents:
         remote:
           url: http://172.31.85.216/update-keys.sh
+    - path: /opt/configs/kubeadm.yaml
+      filesystem: root
+      mode: 0600
+      contents:
+        remote:
+          url: http://172.31.85.216/kubeadm01.yaml
